[workspace]
resolver = "2"
members = [
  "common",
  "netrascan",
  "netraflow",
  "netrawatch",
  "netratrace",
  "netravue",
]
default-members = [ "netraflow" ]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive" , "env"] }
csv = "1.3.1"
dotenv = "0.15.0"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
