[package]
name = "netracrawl"
version = "0.1.0"
edition = "2021"
authors = ["Garunetra Labs"]
description = "Data client from mainnet and third-party data source"
license = "MIT"

[dependencies]
common = { path = "../common", version = "0.1.0" }

# External dependencies
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
